fix spacing and correct data for chicken selection

--- a/css/chickens.css
+++ b/css/chickens.css
@@ -8,9 +8,18 @@
 	z-index: 2;
 	padding: 10px;
 }
+
 .chicken-select label{
 	display: inline-block;
 	margin: 10px 0;
 	width: 100%;
 	text-align: center;
+}
+
+.chicken-selection{
+	display: inline-block;
+	width: 350px;
+	padding: 0;
+	list-style-type: none;
+	margin: 20px auto 0 auto;
 }
